name:                system-power
version:             0.1.0.0
synopsis:            Prevent system sleep
description:         Please see README.md
homepage:            http://github.com/githubuser/system-power#readme
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2016 Yu Li
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Power
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite system-power-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , system-power
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/system-power
